# strings

./: CMakeLists.txt  LICENSE  README.md
strings/: ascii.hpp  builder.hpp  charconv_stubs.hpp  codec.hpp  codepoint.hpp  codepoint_stringers.hpp  compare.hpp  decimal_digits.hpp  fmtspec.hpp  fold-simple.hpp  fold.hpp  fold_simple.hpp  format.hpp  format_locale.hpp  format_spec.hpp  fp.hpp  join.hpp  marshal_traits.hpp  replace.hpp  search_folded.hpp  split.hpp  string_traits.hpp  trim.hpp  utf.hpp
